css/style.css
/*
*  html5resetcss
*/

html,
body,
div,
span,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
abbr,
address,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
samp,
small,
strong,
sub,
sup,
var,
b,
i,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    font-size: 100%;
    vertical-align: baseline;
    background: transparent;
}

body {
    line-height: 1;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block;
}

nav ul {
    list-style: none;
}

blockquote,
q {
    quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
    content: none;
}

a {
    margin: 0;
    padding: 0;
    font-size: 100%;
    vertical-align: baseline;
    background: transparent;
}

ins {
    background-color: #ff9;
    color: #000;
    text-decoration: none;
}

mark {
    background-color: #ff9;
    color: #000;
    font-style: italic;
    font-weight: bold;
}

del {
    text-decoration: line-through;
}

abbr[title],
dfn[title] {
    border-bottom: 1px dotted;
    cursor: help;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

input,
select {
    vertical-align: middle;
}


/*
*  end of CSS Reset
*/

.attribution {
    font-size: 11px;
    text-align: center;
}

.attribution a {
    color: gray;
}


/*
*  Start of Custom CSS
*/

body {
    font-family: "Josefin Sans", sans-serif;
    color: hsl(0, 36%, 70%);
}

#comingSoonSection {
    width: 100%;
    margin: 0 auto;
    -webkit-box-shadow: 0px 11px 22px -2px rgba(0, 0, 0, 0.3);
    -moz-box-shadow: 0px 11px 22px -2px rgba(0, 0, 0, 0.3);
    box-shadow: 0px 11px 22px -2px rgba(0, 0, 0, 0.3);
    overflow: hidden;
    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#fefaf9+0,fff6f7+100 */
    background: #fefaf9;
    /* Old browsers */
    background: -moz-linear-gradient(top, #fefaf9 0%, #fff6f7 100%);
    /* FF3.6-15 */
    background: -webkit-linear-gradient(top, #fefaf9 0%, #fff6f7 100%);
    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom, #fefaf9 0%, #fff6f7 100%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#fefaf9', endColorstr='#fff6f7', GradientType=0);
    /* IE6-9 */
}

#comingSoonHeader {
    font-size: 4rem;
    text-transform: uppercase;
    letter-spacing: 1.2rem;
    line-height: 4.25rem;
    font-weight: 600;
    color: #3a3a3a;
}

#comingSoonHeader i {
    font-weight: 300;
    font-style: normal;
    color: hsl(0, 36%, 70%);
}

#heroImage {
    background-image: url(/images/hero-desktop.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    width: 33.333%;
    height: 800px;
    float: left;
}

#baseApparelLogo {
    margin-top: 3rem;
}

#comingSoonSectionContent {
    background-image: url(/images/bg-pattern-desktop.svg);
    background-size: cover;
    width: 66.666%;
    float: left;
}

#comingSoonSectionContent h1 {
    padding-top: 11rem;
    overflow: visible;
    max-width: 40rem;
}

#comingSoonSectionContent p {
    max-width: 30rem;
    line-height: 2rem;
    margin-top: 1rem;
}

#comingSoonSectionContentLeft {
    margin-left: 10%;
    margin-right: 25%;
}

#mobileHeroImage {
    display: none;
}

#emailSubmitForm {
    margin-top: 2rem;
    max-width: 750px;
    width: 80%;
}

#emailSubmitForm p {
    margin-left: 32px;
}

#emailSubmitForm input {
    height: 48px;
    border-radius: 24px;
    border: 1px solid hsl(0, 36%, 70%);
    text-indent: 2rem;
    font-size: 1rem;
    font-family: inherit;
    font-weight: 300;
    color: inherit;
    line-height: 3rem;
    width: 65%;
}

#emailSubmitForm button {
    background-image: url(/images/icon-arrow.svg);
    width: 100px;
    height: 52px;
    border-radius: 500px;
    cursor: pointer;
    position: relative;
    top: 5px;
    right: 100px;
    background: rgba(247, 185, 185, 1);
    /* Old Browsers */
    background: -moz-linear-gradient( left, rgba(247, 185, 185, 1) 0%, rgba(242, 145, 145, 1) 100%);
    /* FF3.6+ */
    background: -webkit-gradient( left top, right top, color-stop(0%, rgba(247, 185, 185, 1)), color-stop(100%, rgba(242, 145, 145, 1)));
    /* Chrome, Safari4+ */
    background: -webkit-linear-gradient( left, rgba(247, 185, 185, 1) 0%, rgba(242, 145, 145, 1) 100%);
    /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient( left, rgba(247, 185, 185, 1) 0%, rgba(242, 145, 145, 1) 100%);
    /* Opera 11.10+ */
    background: -ms-linear-gradient( left, rgba(247, 185, 185, 1) 0%, rgba(242, 145, 145, 1) 100%);
    /* IE 10+ */
    background: linear-gradient( to right, rgba(247, 185, 185, 1) 0%, rgba(242, 145, 145, 1) 100%);
    /* W3C */
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f7b9b9', endColorstr='#f29191', GradientType=1);
    /* IE6-9 */
}

#emailSubmitForm button:focus {
    border: none;
    outline: none;
    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#fadadb+0,f8c8c8+100 */
    background: #fadadb;
    /* Old browsers */
    background: -moz-linear-gradient(top, #fadadb 0%, #f8c8c8 100%);
    /* FF3.6-15 */
    background: -webkit-linear-gradient(top, #fadadb 0%, #f8c8c8 100%);
    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom, #fadadb 0%, #f8c8c8 100%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#fadadb', endColorstr='#f8c8c8', GradientType=0);
    /* IE6-9 */
}

#emailSubmitForm input:focus {
    outline: none;
}

.shadow {
    -webkit-box-shadow: 0px 15px 30px -2px hsla(0, 93%, 68%, 0.35);
    -moz-box-shadow: 0px 15px 30px -2px hsla(0, 93%, 68%, 0.35);
    box-shadow: 0px 15px 30px -2px hsla(0, 93%, 68%, 0.35);
}

.shadow:hover {
    -webkit-box-shadow: 0px 15px 30px -2px hsla(0, 95%, 78%, 0.8);
    -moz-box-shadow: 0px 15px 30px -2px hsla(0, 95%, 78%, 0.8);
    box-shadow: 0px 15px 30px -2px hsla(0, 95%, 78%, 0.8);
}

footer {
    clear: both;
    padding-top: 2rem;
}

#emailSubmitForm input {
    width: 100%;
    margin: 0 auto;
}

#emailSubmitForm button {
    width: 90px;
    position: absolute;
    top: 0;
    right: -5px;
}

#emailSubmitForm {
    position: relative;
}

#emailSubmitForm #errorIcon {
    right: 110px;
    position: absolute;
    top: 15px;
}

@media (max-width: 910px) {
    #heroImage {
        float: none;
    }
    #comingSoonSectionContent {
        float: none;
        width: 100%;
    }
    #comingSoonSectionContentLeft {
        margin: 0;
    }
    #comingSoonHeader {
        text-align: center;
    }
    #comingSoonSectionContent h1 {
        padding-top: 3rem;
        text-align: center;
    }
    #comingSoonSectionContent p {
        text-align: center;
        width: 100%;
        margin: 0 0rem;
    }
    #mobileHeroImage {
        display: block;
        width: 100%;
        margin-top: 3rem;
    }
    #comingSoonHeader {
        font-size: 3rem;
    }
    #heroImage {
        display: none;
    }
    #comingSoonSectionContent h1,
    #comingSoonSectionContent p {
        max-width: none;
    }
    #comingSoonSectionContent p {
        width: 80%;
        margin: 2.05rem auto;
        margin-bottom: 6rem;
    }
    #emailSubmitForm {
        position: relative;
        width: 80%;
        margin: 2rem auto;
    }
}

